examples/invalid/test06.alice

The room main () contained a number

closed
